include/pan/pan.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
typedef long long GoInt64;
typedef GoInt64 GoInt;
typedef _GoString_ GoString;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;
/**
\brief Duplicate a cgo handle.
\ingroup handle
*/
extern uintptr_t PanDuplicateHandle(uintptr_t handle);
/**
\brief Delete a handle obtained from cgo.
\ingroup handle
*/
extern void PanDeleteHandle(uintptr_t handle);
/**
\brief Wrapper for `pan.ResolveUDPAddr`
	A handle to the resolved address is returned in `resolved`.
\attention deprecated in favour of PanResolveUDPAddrN
		Reason:	conversion of C to Go string with func C.GoString(p *_Ctype_char) string
		has been repeatedly found to be unreliable and cause bugs.
\ingroup addresses
*/
extern PanError PanResolveUDPAddr(cchar_t* address, PanUDPAddr* resolved);
extern PanError PanResolveUDPAddrN(cchar_t* address, int len, PanUDPAddr* resolved);
/**
\brief Create a PanUDPAddr from ISD, ASN, IP and UDP port.
\param[in] ia Pointer to the ISD and AS number packed as 8 bytes in big-endian
	byte order. Must not be NULL.
\param[in] ip Pointer to the IP address in big-endian byte order. Must not be
	NULL.
\param[in] ip_len Length of the IP address in bytes. Must be 4 or 16.
\param[in] port UDP port number
\return UDPAddr handle. A null handle is returned if \p ip_len is not 4 or 16.
\ingroup addresses
*/
extern PanUDPAddr PanUDPAddrNew(cuint64_t* ia, cuint8_t* ip, int ip_len, uint16_t port);
/**
\brief Get the ISD (2 bytes) and ASN (6 bytes) of the address.
\param[out] Pointer to 8 bytes that will receive the ISD and AS number in
	big-endian byte order. Function is a no-op if this is `NULL`.
\ingroup addresses
*/
extern void PanUDPAddrGetIA(PanUDPAddr addr, uint64_t* ia);
/**
\brief Returns whether the IP-part of the address is IPv6 (including mapped IPv4
	addresses).
\return `0` for IPv4 addresses, non-zero otherwise.
\ingroup addresses
*/
extern int PanUDPAddrIsIPv6(PanUDPAddr addr);
/**
\brief Get the IP part of the address. Fails if the address is not an IPv4
	or IPv4-in-IPv6 address.
\param[out] ipv4 Pointer to a 4-byte array that will receive the IP address.
	Function is a no-op if this is `NULL`.
\return `PAN_ERR_OK` if no error occurred.
	`PAN_ERR_FAILED` if the address cannot be represented in 4 bytes.
\ingroup addresses
*/
extern PanError PanUDPAddrGetIPv4(PanUDPAddr addr, uint8_t* ip4);
/**
\brief Get the IP part of the address. IPv4 addresses are returned in
	IPv6-mapped form.
\param[out] ipv6 Pointer to a 16-byte array that will receive the IP address.
	Function is a no-op if this is `NULL`.
\return `PAN_ERR_OK` if no error occurred.
\ingroup addresses
*/
extern PanError PanUDPAddrGetIPv6(PanUDPAddr addr, uint8_t* ip6);
/**
\brief Get the UDP port as integer in host byte order.
\ingroup addresses
*/
extern uint16_t PanUDPAddrGetPort(PanUDPAddr addr);
/**
\brief Returns a string representation of the given SCION address.
The returned string must be freed with free().
\ingroup addresses
*/
extern char* PanUDPAddrToString(PanUDPAddr addr);
/**
\brief Return a string representing the path.
The returned string must be freed with free().
\ingroup path
*/
extern char* PanPathToString(PanPath path);
/**
\brief Get the fingerprint of the path.
\ingroup path
*/
extern PanPathFingerprint PanPathGetFingerprint(PanPath path);
/**
\brief Check whether a path contains a certain AS interface.
\ingroup path
*/
extern int PanPathContainsInterface(PanPath path, PanPathInterface iface);
/**
\brief Check whether two path fingerprints compare equal.
\ingroup path_fingerprint
*/
extern int PanPathFingerprintAreEqual(PanPathFingerprint fp_a, PanPathFingerprint fp_b);
/**
\brief Create a new path policy from a filter function.
\param[in] filter Filter callback.
\param[in] user User data that will be passed to the callback.
\ingroup policy
*/
extern PanPolicy PanNewCPolicy(PanPolicyFilterFn filter, uintptr_t user);
extern void PanCPolicyTest(PanPolicy policy);
/**
\brief Create a new path selector.
\param[in] callbacks Callbacks for the methods of the path selector.
\param[in] user User data that will be passed to the callback.
\ingroup selector
*/
extern PanSelector PanNewCSelector(struct PanSelectorCallbacks* callbacks, uintptr_t user);
/**
\brief Create a new reply selector.
\param[in] callbacks Callbacks for the methods of the reply selector.
\param[in] user User data that will be passed to the callback.
\ingroup reply_selector
*/
extern PanReplySelector PanNewCReplySelector(struct PanReplySelCallbacks* callbacks, uintptr_t user);
extern PanScionSocket PanNewScionSocket(cchar_t* listen, int n);
extern PanScionSocket PanNewScionSocket2();
extern PanError PanScionSocketBind(PanScionSocket socket, cchar_t* listen);
extern char* PanScionSocketGetLocalAddr(PanScionSocket socket);
extern PanError PanScionSocketReadFromAsync(PanScionSocket conn, void* buffer, int len, PanUDPAddr* from, int* n, int timeout_duration, OnCompletionWaker waker, void* arc_conn);
extern PanError PanScionSocketWriteToAsync(PanScionSocket conn, cvoid_t* buffer, int len, PanUDPAddr to, int* n, int timeout, OnCompletionWaker waker, void* arc_conn);
extern PanError PanScionSocketWriteToViaAsync(PanScionSocket conn, cvoid_t* buffer, int len, PanUDPAddr to, PanPath path, int* n, int timeout, OnCompletionWaker waker, void* arc_conn);
extern PanError PanScionSocketReadFromAsyncVia(PanScionSocket conn, void* buffer, int len, PanUDPAddr* from, PanPath* path, int* n, int timeout_duration, OnCompletionWaker waker, void* arc_conn);
extern PanError PanScionSocketClose(PanScionSocket conn);
/**
\brief Wrapper for `(pan.ListenConn).SetDeadline`
\param[in] conn Connection to set the deadline on.
\param[in] t is the number milliseconds the deadline is set in the future.
\ingroup listen_conn
*/
extern PanError PanScionSocketSetDeadline(PanScionSocket conn, uint32_t t);
/**
\brief Wrapper for `(pan.ListenConn).SetReadDeadline`
\param[in] conn Connection to set the deadline on.
\param[in] t is the number milliseconds the deadline is set in the future.
\ingroup listen_conn
*/
extern PanError PanScionSocketSetReadDeadline(PanScionSocket conn, uint32_t t);
/**
\brief Wrapper for `(pan.ListenConn).SetWriteDeadline`
\param[in] conn Connection to set the deadline on.
\param[in] t is the number milliseconds the deadline is set in the future.
\ingroup listen_conn
*/
extern PanError PanScionSocketSetWriteDeadline(PanScionSocket conn, uint32_t t);
/**
\brief Open a UDP socket and listen for connections.
\param[in] listen is the local IP and port to listen on as a null-terminated
	string (e.g., "127.0.0.1:8000").
\param[in] selector Reply path selector. May be a PAN_INVALID_HANDLE to use the
	default selector.
\param[out] conn The value pointed to by \p conn receives the listening
	connection handle if the call is successful.
	\ingroup listen_conn
\return `PAN_ERR_OK` on success.
	`PAN_ERR_ADDR_SYNTAX` is the listen address has an invalid format.
	`PAN_ERR_FAILED` if binding and listening on the socket failed.
*/
extern PanError PanListenUDP(cchar_t* listen, PanReplySelector selector, PanListenConn* conn);
/**
\brief Wrapper for `(pan.ListenConn).ReadFrom`
\param[in] conn Listening connection.
\param[in] buffer Pointer to a buffer that will receive the packet.
\param[in] len Size of \p buffer in bytes.
\param[out] from Host from which data was received. Can be NULL to ignore.
\param[out] n Number of bytes read. Can be NULL to ignore.
\return `PAN_ERR_OK` on success.
	`PAN_ERR_DEADLINE` if the deadline was exceeded.
	`PAN_ERR_FAILED` if the operation failed.
\ingroup listen_conn
*/
extern PanError PanListenConnReadFrom(PanListenConn conn, void* buffer, int len, PanUDPAddr* from, int* n);