rust/src/bindings.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GoSlice {
    pub data: *mut ::std::os::raw::c_void,
    pub len: GoInt,
    pub cap: GoInt,
}
#[test]
fn bindgen_test_layout_GoSlice() {
    const UNINIT: ::std::mem::MaybeUninit<GoSlice> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<GoSlice>(),
        24usize,
        concat!("Size of: ", stringify!(GoSlice))
    );
    assert_eq!(
        ::std::mem::align_of::<GoSlice>(),
        8usize,
        concat!("Alignment of ", stringify!(GoSlice))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).data) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(GoSlice),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).len) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(GoSlice),
            "::",
            stringify!(len)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cap) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(GoSlice),
            "::",
            stringify!(cap)
        )
    );
}
extern "C" {
    #[doc = "\\brief Duplicate a cgo handle.\n\\ingroup handle"]
    pub fn PanDuplicateHandle(handle: usize) -> usize;
}
extern "C" {
    #[doc = "\\brief Delete a handle obtained from cgo.\n\\ingroup handle"]
    pub fn PanDeleteHandle(handle: usize);
}
extern "C" {
    #[doc = "\\brief Wrapper for `pan.ResolveUDPAddr`\nA handle to the resolved address is returned in `resolved`.\n\\attention deprecated in favour of PanResolveUDPAddrN\nReason:\tconversion of C to Go string with func C.GoString(p *_Ctype_char) string\nhas been repeatedly found to be unreliable and cause bugs.\n\\ingroup addresses"]
    pub fn PanResolveUDPAddr(
        address: *const ::std::os::raw::c_char,
        resolved: *mut PanUDPAddr,
    ) -> PanError;
}
extern "C" {
    pub fn PanResolveUDPAddrN(
        address: *const ::std::os::raw::c_char,
        len: ::std::os::raw::c_int,
        resolved: *mut PanUDPAddr,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Create a PanUDPAddr from ISD, ASN, IP and UDP port.\n\\param[in] ia Pointer to the ISD and AS number packed as 8 bytes in big-endian\nbyte order. Must not be NULL.\n\\param[in] ip Pointer to the IP address in big-endian byte order. Must not be\nNULL.\n\\param[in] ip_len Length of the IP address in bytes. Must be 4 or 16.\n\\param[in] port UDP port number\n\\return UDPAddr handle. A null handle is returned if \\p ip_len is not 4 or 16.\n\\ingroup addresses"]
    pub fn PanUDPAddrNew(
        ia: *const ::std::os::raw::c_ulong,
        ip: *const ::std::os::raw::c_uchar,
        ip_len: ::std::os::raw::c_int,
        port: u16,
    ) -> PanUDPAddr;
}
extern "C" {
    #[doc = "\\brief Get the ISD (2 bytes) and ASN (6 bytes) of the address.\n\\param[out] Pointer to 8 bytes that will receive the ISD and AS number in\nbig-endian byte order. Function is a no-op if this is `NULL`.\n\\ingroup addresses"]
    pub fn PanUDPAddrGetIA(addr: PanUDPAddr, ia: *mut u64);
}
extern "C" {
    #[doc = "\\brief Returns whether the IP-part of the address is IPv6 (including mapped IPv4\naddresses).\n\\return `0` for IPv4 addresses, non-zero otherwise.\n\\ingroup addresses"]
    pub fn PanUDPAddrIsIPv6(addr: PanUDPAddr) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\\brief Get the IP part of the address. Fails if the address is not an IPv4\nor IPv4-in-IPv6 address.\n\\param[out] ipv4 Pointer to a 4-byte array that will receive the IP address.\nFunction is a no-op if this is `NULL`.\n\\return `PAN_ERR_OK` if no error occurred.\n`PAN_ERR_FAILED` if the address cannot be represented in 4 bytes.\n\\ingroup addresses"]
    pub fn PanUDPAddrGetIPv4(addr: PanUDPAddr, ip4: *mut u8) -> PanError;
}
extern "C" {
    #[doc = "\\brief Get the IP part of the address. IPv4 addresses are returned in\nIPv6-mapped form.\n\\param[out] ipv6 Pointer to a 16-byte array that will receive the IP address.\nFunction is a no-op if this is `NULL`.\n\\return `PAN_ERR_OK` if no error occurred.\n\\ingroup addresses"]
    pub fn PanUDPAddrGetIPv6(addr: PanUDPAddr, ip6: *mut u8) -> PanError;
}
extern "C" {
    #[doc = "\\brief Get the UDP port as integer in host byte order.\n\\ingroup addresses"]
    pub fn PanUDPAddrGetPort(addr: PanUDPAddr) -> u16;
}
extern "C" {
    #[doc = "\\brief Returns a string representation of the given SCION address.\nThe returned string must be freed with free().\n\\ingroup addresses"]
    pub fn PanUDPAddrToString(addr: PanUDPAddr) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    #[doc = "\\brief Return a string representing the path.\nThe returned string must be freed with free().\n\\ingroup path"]
    pub fn PanPathToString(path: PanPath) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    #[doc = "\\brief Get the fingerprint of the path.\n\\ingroup path"]
    pub fn PanPathGetFingerprint(path: PanPath) -> PanPathFingerprint;
}
extern "C" {
    #[doc = "\\brief Check whether a path contains a certain AS interface.\n\\ingroup path"]
    pub fn PanPathContainsInterface(
        path: PanPath,
        iface: PanPathInterface,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\\brief Check whether two path fingerprints compare equal.\n\\ingroup path_fingerprint"]
    pub fn PanPathFingerprintAreEqual(
        fp_a: PanPathFingerprint,
        fp_b: PanPathFingerprint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\\brief Create a new path policy from a filter function.\n\\param[in] filter Filter callback.\n\\param[in] user User data that will be passed to the callback.\n\\ingroup policy"]
    pub fn PanNewCPolicy(filter: PanPolicyFilterFn, user: usize) -> PanPolicy;
}
extern "C" {
    pub fn PanCPolicyTest(policy: PanPolicy);
}
extern "C" {
    #[doc = "\\brief Create a new path selector.\n\\param[in] callbacks Callbacks for the methods of the path selector.\n\\param[in] user User data that will be passed to the callback.\n\\ingroup selector"]
    pub fn PanNewCSelector(callbacks: *mut PanSelectorCallbacks, user: usize) -> PanSelector;
}
extern "C" {
    #[doc = "\\brief Create a new reply selector.\n\\param[in] callbacks Callbacks for the methods of the reply selector.\n\\param[in] user User data that will be passed to the callback.\n\\ingroup reply_selector"]
    pub fn PanNewCReplySelector(
        callbacks: *mut PanReplySelCallbacks,
        user: usize,
    ) -> PanReplySelector;
}
extern "C" {
    pub fn PanNewScionSocket(
        listen: *const ::std::os::raw::c_char,
        n: ::std::os::raw::c_int,
    ) -> PanScionSocket;
}
extern "C" {
    pub fn PanNewScionSocket2() -> PanScionSocket;
}
extern "C" {
    pub fn PanScionSocketBind(
        socket: PanScionSocket,
        listen: *const ::std::os::raw::c_char,
    ) -> PanError;
}
extern "C" {
    pub fn PanScionSocketGetLocalAddr(socket: PanScionSocket) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn PanScionSocketReadFromAsync(
        conn: PanScionSocket,
        buffer: *mut ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        from: *mut PanUDPAddr,
        n: *mut ::std::os::raw::c_int,
        timeout_duration: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    pub fn PanScionSocketWriteToAsync(
        conn: PanScionSocket,
        buffer: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        to: PanUDPAddr,
        n: *mut ::std::os::raw::c_int,
        timeout: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    pub fn PanScionSocketWriteToViaAsync(
        conn: PanScionSocket,
        buffer: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        to: PanUDPAddr,
        path: PanPath,
        n: *mut ::std::os::raw::c_int,
        timeout: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    pub fn PanScionSocketReadFromAsyncVia(
        conn: PanScionSocket,
        buffer: *mut ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        from: *mut PanUDPAddr,
        path: *mut PanPath,
        n: *mut ::std::os::raw::c_int,
        timeout_duration: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    pub fn PanScionSocketClose(conn: PanScionSocket) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).SetDeadline`\n\\param[in] conn Connection to set the deadline on.\n\\param[in] t is the number milliseconds the deadline is set in the future.\n\\ingroup listen_conn"]
    pub fn PanScionSocketSetDeadline(conn: PanScionSocket, t: u32) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).SetReadDeadline`\n\\param[in] conn Connection to set the deadline on.\n\\param[in] t is the number milliseconds the deadline is set in the future.\n\\ingroup listen_conn"]
    pub fn PanScionSocketSetReadDeadline(conn: PanScionSocket, t: u32) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).SetWriteDeadline`\n\\param[in] conn Connection to set the deadline on.\n\\param[in] t is the number milliseconds the deadline is set in the future.\n\\ingroup listen_conn"]
    pub fn PanScionSocketSetWriteDeadline(conn: PanScionSocket, t: u32) -> PanError;
}
extern "C" {
    #[doc = "\\brief Open a UDP socket and listen for connections.\n\\param[in] listen is the local IP and port to listen on as a null-terminated\nstring (e.g., \"127.0.0.1:8000\").\n\\param[in] selector Reply path selector. May be a PAN_INVALID_HANDLE to use the\ndefault selector.\n\\param[out] conn The value pointed to by \\p conn receives the listening\nconnection handle if the call is successful.\n\\ingroup listen_conn\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_ADDR_SYNTAX` is the listen address has an invalid format.\n`PAN_ERR_FAILED` if binding and listening on the socket failed."]
    pub fn PanListenUDP(
        listen: *const ::std::os::raw::c_char,
        selector: PanReplySelector,
        conn: *mut PanListenConn,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).ReadFrom`\n\\param[in] conn Listening connection.\n\\param[in] buffer Pointer to a buffer that will receive the packet.\n\\param[in] len Size of \\p buffer in bytes.\n\\param[out] from Host from which data was received. Can be NULL to ignore.\n\\param[out] n Number of bytes read. Can be NULL to ignore.\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_DEADLINE` if the deadline was exceeded.\n`PAN_ERR_FAILED` if the operation failed.\n\\ingroup listen_conn"]
    pub fn PanListenConnReadFrom(
        conn: PanListenConn,
        buffer: *mut ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        from: *mut PanUDPAddr,
        n: *mut ::std::os::raw::c_int,
    ) -> PanError;
}
